2005-03-24  John W. Eaton  <jwe@octave.org>

	* optimization/glpkmex.m: Texinfoize Doc string.
	* optimization/glpk.m: Likewise.
	Allow VARTYPE and CTYPE to be row or column vectors of characters
	(row vectors are orginary character strings).
	* optimization/glpkparam.m: Delete.

2005-03-24  Quentin Spencer  <qspencer@ieee.org>

	* statistics/base/mean.m: Allow DIMS arg greater than the number
	of dimensions of X.

2005-03-23  John W. Eaton  <jwe@octave.org>

	* general/tril.m, general/triu.m: Return value of same class as
	argument.

	* optimization/glpk.m: Simplify interface.  By default, solve
	standard LP min C'*x s.t. A*x = b, x >= 0.
	* optimization/glpkmex.m: New file.

2005-03-22  John W. Eaton  <jwe@octave.org>

	* configure.in (AC_CONFIG_FILES): Add optimization/Makefile to the
	list.

	* optimization/glpk.m: Adapt to Octave coding style.
	No need for varargout or varargin.
	Print usage message if nargin > 11.
	Allow any value of nargout.
	Use repmat (C, nr, nc) instead of char (C * ones (nr, nc)).
	Avoid looping when checking character classes.

	* optimization: New directory.
	* Makefile.in (SUBDIRS): Add it to the list.
	* optimization/Makefile.in: New file.
	* optimization/glpk.m, optimization/glpkparams.m,
	optimization/glpktest1, optimization/glpktest2: New files.

2005-03-16  Soren Hauberg  <soren@hauberg.org>

	* strings/split.m: Quick return for empty second arg.
	Improve warning for multi-line strings.
	Speed up by avoiding sprintf in loop and eval.

2005-03-16  Paul Kienzle  <pkienzle@users.sf.net>

	* polynomial/polyderiv.m : Accept a*b, a/b.  Auto-reduce common terms.
	* polynomial/polyder.m: Ditto.
        * polynomial/polygcd.m: New function.

2005-03-16  John W. Eaton  <jwe@octave.org>

	* control/base/__stepimp__.m, control/base/bode.m,
	control/base/frdemo.m, control/base/nichols.m,
	control/base/nyquist.m, control/base/pzmap.m,
	control/base/rldemo.m, control/base/rlocus.m,
	control/hinf/dhinfdemo.m, control/hinf/hinfdemo.m,